fix(be): lock users, roles, and permissions to current tenan
